  Technical: registry.get() was throwing Unauthorized. Refs #16173
  [reinhardt]
- Make sure navigation does not float. Refs #16289
  [reinhardt]
- Firefox: Make sure first heading in document does not float. Refs #16289
  [reinhardt]
- Participating journals: Links don't jump between portals.
  Technical: Use full absolute_url in getPublications(). Refs #16175
  [reinhardt]


4.2.2 (2018-01-18)
------------------

- Added social media buttons. Refs #16159
  [reinhardt]
- Replaced FontAwesome characters with inline SVGs. Refs #16405
  [reinhardt]


4.2.1 (2017-11-16)
------------------

- External full text: adjusted padding. Refs #16044
  [reinhardt]
- search_rss must be called on navigation root. Refs #15955
  [reinhardt]
- Authorsearch: Only show authors of published content. Refs #16044
  [reinhardt]
- Search: Improved layout for default content types. Refs #16044
  [reinhardt]
- Search: Support disabling thematic search section. Refs #16044
  [reinhardt]


4.2.0 (2017-09-21)
------------------

- Removed legend from author search. Refs #15699
  [reinhardt]
- Pull in logo link so we can make it point to the portal URL. Refs #15816
  [reinhardt]
- Dynamic portal title in author search. Refs #15699
  [reinhardt]
- Added datenschutz view that displays Piwik opt-out. Refs #15889
  [reinhardt]
- Removed references to presentations. Refs #15699
  [reinhardt]


4.1.2 (2017-06-12)
------------------

- Removed tab "Zitierhinweise". Refs #15418
  [reinhardt]


4.1.1 (2017-01-27)
------------------

- Restored lost changes.
  [reinhardt]
- margin-top for twitter button, refs #13628
  [reinhardt]


4.1.0 (2017-01-27)
------------------

- TÃ¶chter, refs #13564, #13565, #13566, #13568, #13569, #13659, #13718
  [reinhardt]


4.0.2 (2016-07-08)
------------------

- Nothing changed yet.


4.0.1 (2016-05-23)
------------------

- Another syndication fix for Plone 4.3, refs #11785 #13624 [reinhardt]


4.0.0 (2016-04-25)
------------------

- New post-it images, refs #13370