@@ -16,6 +16,8 @@ Fixed:
 - Participating journals: Links don't jump between portals.
   Technical: Use full absolute_url in getPublications(). Refs #16175
   [reinhardt]
+- Metadata accordion: removed GIFs; added styling for SVGs. Refs #16175
+  [reinhardt]
 
 
 4.2.2 (2018-01-18)
